@@ -7,10 +7,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public class CommerceServiceImpl {
+public class CommerceServiceImpl implements CommerceService {
 
     private CommerceRepository commerceRepository;
 
@@ -22,10 +21,10 @@ public class CommerceServiceImpl {
         this.commerceDTOUtil = commerceDTOUtil;
     }
 
+    @Override
     public List<CommerceDTO> getCommerces () {
         return this.commerceRepository.findAll()
                 .stream()
-                .map(commerceDTOUtil::toCommerceDTO)
-                .collect(Collectors.toList());
+                .map(commerceDTOUtil::toCommerceDTO).toList();
     }
 }
